trunk/Archive2/9a/faa2abe2ea46e7/output
main.cpp:3:15: error: constexpr variable 'x' must be initialized by a constant expression
constexpr int x = foo();
              ^   ~~~~~
main.cpp:3:19: note: undefined function 'foo' cannot be used in a constant expression
constexpr int x = foo();
                  ^
main.cpp:1:15: note: declared here
constexpr int foo();
              ^
1 error generated.
